--- a/src/sections/header/header.css
+++ b/src/sections/header/header.css
@@ -1,5 +1,6 @@
 /* Styling for the header section */
 header {
+    width: 100%;
     margin-top: 5rem;
     height: calc(100vh - 5rem);
     display: grid;
@@ -40,9 +41,10 @@ header {
 
 /* Styling for the paragraph within the header container */
 .header_container p {
-    width: 35rem;
+    width: 100%;
     margin: 0.6rem 0 2rem;
 }
+
 
 /* Styling for the call-to-action buttons within the header */
 .header_cta {
@@ -78,6 +80,13 @@ header {
     .header_profile {
         width: 100%;
     }
+
+    .header_content {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
 }
 
 /* Media Queries (phones) */
@@ -94,6 +103,7 @@ header {
     }
 
     .header_content {
+        display: flex;
         flex-direction: column;
         align-items: center;
         text-align: center;
